<resources>
    <string name="app_name">Scan QR Code</string>

    <!--region All-->
    <string name="all_button_active">OK</string>
    <string name="all_button_positive">Cancel</string>
    <string name="all_btn_close">Close</string>
    <string name="all_btn_quit">Quit</string>
    <string name="all_permission_denied">Permission Denied</string>
    <!--endregion-->

    <!--    Home-->
    <string name="scan_code">Scan Code</string>
    <string name="scanned">Scanned</string>
    <string name="create">Create</string>
    <string name="created">Created</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="result">Result</string>
    <string name="detail">Detail</string>
    <string name="title_generate_result_screen">Create QR Code Successfully</string>

    <string name="dialog_process_title">Loading…</string>
    <string name="dialog_process_message">Please wait a moment</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="select_theme">Select theme</string>
    <string name="select_language">Select language</string>
    <string name="vibrate">Vibrate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Version: %s</string>
    <string name="vibrate_message">Vibration when scan is done.</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_auto">System</string>


    <!--    Input Data Screen-->
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="link">URL</string>
    <string name="photo">Photo</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="wifi_name">Wifi name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="your_job">Your job</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="encryption">Encryption</string>
    <string name="hide_network">Hide network</string>
    <string name="website">Website</string>
    <string name="wifi">Wifi</string>
    <string name="location">Location</string>
    <string name="aztec" translatable="false">AZTEC</string>
    <string name="data_matrix" translatable="false">Data Matrix</string>
    <string name="pdf_417" translatable="false">PDF 417</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="contact">Contact</string>
    <string name="event">Event</string>
    <string name="flash">Flash</string>
    <string name="copy">Copy</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="connect">Connect</string>
    <string name="call">Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>


    <string name="result_wifi">Wifi Name:  %s\nPassword:  %s\nType:  %s</string>
    <string name="result_email">Email to:  %s\nSubject:  %s\nMessage:  %s</string>
    <string name="result_sms">Phone number: %s\nMessage: %s</string>

    <string name="result_contact_first_name">First name: %s\n</string>
    <string name="result_contact_last_name">Last name: %s\n</string>
    <string name="result_contact_phone_number">Phone number: %s\n</string>
    <string name="result_contact_email">Email: %s\n</string>
    <string name="result_contact_company">Company: %s\n</string>
    <string name="share_title">Share with</string>
    <string name="save_image_success">Saved image successfully</string>
    <string name="save_image_failed">Save image failed</string>
    <string name="failed_to_scan">Failed to scan.</string>
    <string name="error">Error</string>
    <string name="scan_form_path_error_message">Could not find content from photo</string>
    <string name="device_not_support_front_camera_message">The device does not support the front camera</string>
    <string name="device_not_support_flash_camera_message">The device does not support flash</string>
    <string name="device_not_support_any_camera_message">Your device does not support the camera</string>
    <string name="no_permission_camera_message">The app does not have access to the camera</string>
    <string name="no_permission_storage_message">The app does not have permission to access the library</string>
    <string name="language_eng">English</string>
    <string name="language_vi">Vietnamese</string>
    <string name="history_is_empty">History is empty</string>
    <string name="generate_from_your_location">Generate from your location</string>
    <string name="qr_code">QR code</string>
    <string name="other">Other</string>
    <!-- endregion-->


    <!--    Search Region-->
    <string name="search_engine_google_url" translatable="false">https://www.google.com/search?q=%1$s</string>
    <string name="search_engine_bing_url" translatable="false">https://www.bing.com/search?q=%1$s</string>
    <string name="search_engine_duck_duck_go_url" translatable="false">https://duckduckgo.com/?q=%1$s</string>
    <string name="search_engine_startpage_url" translatable="false">https://www.startpage.com/do/metasearch.pl?query=%1$s</string>
    <string name="search_engine_brave_search_url" translatable="false">https://search.brave.com/search?q=%1$s</string>
    <string name="search_engine_qwant_url" translatable="false">https://www.qwant.com/?q=%1$s</string>
    <string name="search_engine_ecosia_url" translatable="false">https://www.ecosia.org/search?q=%1$s</string>
    <string name="search_engine_lilo_url" translatable="false">https://search.lilo.org/?q=%1$s</string>
    <!-- endregion-->
</resources>
