<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.keyboardhero.qr.features.main.MainFragment"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.keyboardhero.qr.features.scan.ScanFragment"
        android:label="@string/scan_code"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/createFragment"
        android:name="com.keyboardhero.qr.features.create.CreateFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.keyboardhero.qr.features.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.keyboardhero.qr.features.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/generateResultFragment"
        android:name="com.keyboardhero.qr.features.create.result.GenerateResultFragment"
        android:label="fragment_generate_result"
        tools:layout="@layout/fragment_generate_result">
        <argument
            android:name="type"
            app:argType="com.keyboardhero.qr.shared.domain.dto.BarcodeType" />
        <argument
            android:name="barcodeData"
            app:argType="com.keyboardhero.qr.shared.domain.dto.barcodedata.BarcodeData" />
        <argument
            android:name="isCreateNew"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/inputSmsDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.sms.InputSmsDataFragment"
        android:label="InputSmsDataFragment"
        tools:layout="@layout/fragment_input_sms_data" />
    <fragment
        android:id="@+id/inputContactDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.contact.InputContactDataFragment"
        android:label="InputContactDataFragment" />
    <fragment
        android:id="@+id/inputWifiDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.wifi.InputWifiDataFragment"
        android:label="InputWifiDataFragment" />
    <fragment
        android:id="@+id/inputUrlDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.url.InputUrlDataFragment"
        android:label="InputUrlDataFragment" />
    <fragment
        android:id="@+id/resultScanFragment"
        android:name="com.keyboardhero.qr.features.scan.resutl.ResultScanFragment"
        android:label="ResultScanFragment" >
        <argument
            android:name="scanData"
            app:argType="string" />
        <argument
            android:name="isCreateNew"
            app:argType="boolean"
            android:defaultValue="true" />
        <argument
            android:name="createAt"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/inputPhoneDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.phone.InputPhoneDataFragment"
        android:label="InputPhoneDataFragment" />
    <fragment
        android:id="@+id/inputEmailDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.email.InputEmailDataFragment"
        android:label="InputEmailDataFragment" />
    <fragment
        android:id="@+id/inputTextDataFragment"
        android:name="com.keyboardhero.qr.features.create.input.text.InputTextDataFragment"
        android:label="InputTextDataFragment" />
</navigation>
