<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_48dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/itemScan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:background="@drawable/background_border_16"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvNameApp">

        <ImageView
            android:id="@+id/imgScan"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_qr_code_scanner_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_toEndOf="@id/imgScan"
            android:text="@string/scan_code"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:background="@drawable/background_border_16"
        android:padding="@dimen/size_16dp"
        app:layout_constraintTop_toBottomOf="@id/itemScan">

        <ImageView
            android:id="@+id/imgCreate"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add_qr_code_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_toEndOf="@id/imgCreate"
            android:text="@string/create"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_forward_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:background="@drawable/background_border_16"
        android:padding="@dimen/size_16dp"
        app:layout_constraintTop_toBottomOf="@id/itemCreate">

        <ImageView
            android:id="@+id/imgHistory"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_history_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_toEndOf="@id/imgHistory"
            android:text="@string/history"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_forward_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:background="@drawable/background_border_16"
        android:padding="@dimen/size_16dp"
        app:layout_constraintTop_toBottomOf="@id/itemHistory">

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_32dp"
            android:layout_toEndOf="@id/imgSettings"
            android:text="@string/settings"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_forward_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
