<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/size_16dp">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.keyboardhero.qr.features.widget.InputDataView
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:startIcon="@drawable/ic_wifi" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <com.keyboardhero.qr.features.widget.InputDataView
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:startIcon="@drawable/ic_lock" />

        <TextView
            android:id="@+id/tvEncryption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="@string/encryption"
            app:layout_constraintBottom_toBottomOf="@id/layoutAutoCompleteTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutAutoCompleteTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAutoCompleteTextView"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            app:layout_constraintStart_toEndOf="@id/tvEncryption"
            app:layout_constraintTop_toBottomOf="@id/inputPassword">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:focusable="false"
                android:inputType="none"
                android:textSize="@dimen/font_size_14_small" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_network"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAutoCompleteTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>