<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.scan.ScanFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.keyboardhero.qr.features.widget.BarcodePreview
        android:id="@+id/barcodePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_45dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_code"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

    <ImageView
        android:id="@+id/imgSwitchCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_camera_switch"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBack"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/btnToggleFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_flash_off"
        app:layout_constraintBottom_toTopOf="@id/tvToggleFlash"
        app:layout_constraintEnd_toStartOf="@id/btnSelectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvToggleFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_32dp"
        android:text="@string/flash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnToggleFlash"
        app:layout_constraintStart_toStartOf="@id/btnToggleFlash" />

    <ImageView
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_photo_library"
        app:layout_constraintBottom_toTopOf="@id/tvSelectPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnToggleFlash"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_32dp"
        android:text="@string/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnSelectPhoto"
        app:layout_constraintStart_toStartOf="@id/btnSelectPhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>